--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "nodemon": "^3.0.1"
   }
 }
