--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   "author": "kelompok 3",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "mongoose": "^7.4.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
