--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB = "mongodb://localhost:27017/makanyukDB";
+DB = mongodb://localhost:27017/makanyukDB
+SECRET = asd2324jfsoiue98245hertiuh8&AHASD98H
